@startuml
'https://plantuml.com/class-diagram

note left of java.SceneController::EditTab
tab that :
EditSelectedItemClicked = make visible
SaveChanges = make invisible
end note

class java.InventoryManager {
+ main()
+ start()
}

class java.SceneManager {
- scene : Map<String, String>
+ SceneManager()
+ loadScene(key) : Scene
}

class java.SceneController {
--<b>Main Scene--
--Menu Bar--
+ CloseApp : MenuItem
+ SaveInventory : MenuItem
+ LoadInventory : MenuItem
..
+ CloseAppClicked()
+ SaveInventoryClicked()
+ LoadInventoryClicked()
--Tab Module--
..<i>New..
+ NewNameTextField : TextField
+ NewSerialTextField : TextField
+ NewValueTextField : TextField
+ AddItem : Button
..
+ AddItemClicked()
..<i>Edit..
+ EditTab : Tab?
+ EditNameTextField : TextField
+ EditSerialTextField : TextField
+ EditValueTextField : TextField
+ SaveChanges : Button
..
+ SaveChangesClicked()
..<i>Search..
+ SearchTextField : TextField
+ SearchSerialRadio : RadioButton
+ SearchNameRadio :RadioButton
+ SearchButton : Button
+ SearchTableView : TableView<Item>
..
+ SearchButtonClicked()
+ UpdateSearchTableView()
--Inventory Viewer Module--
+ InventoryViewer : TableView<Item>
..
+ UpdateInventory()
..<i>Button Bar..
+ EditSelectedItem
+ DeleteSelectedItem
..
+ EditSelectedItemClicked()
+ DeleteSelectedItemClicked()
--<b>Error Scene--
+ OKButton : Button
..
+ OKButtonClicked()
}

class java.Inventory {
inventory : List<Item>
--Methods--
+ Inventory()
+ addItem()
+ getItem() : Item
+ deleteItem(Item)
..Search..
+ searchByName(name) : List<Item>
+ searchBySerial(serialnumber) : Item
..Save..
+ saveTSV()
+ loadTSV()
+ saveHTML()
+ loadHTML()
+ saveJSON()
+ loadJSON()
}

class java.Item {
- name : String
- serialnumber : String
- value : BigDecimal
..Constructors..
+ Item(name, serialnumber, value)
+ setName(name)
+ getName() : String
+ setSerialNumber(serialnumber)
+ getSerialNumber() : String
+ setValue(value)
+ getValue() : BigDecimal
..Validators..
- validName(name) : boolean
- validSerialNumber(serialnumber) : boolean
}

namespace java {
Inventory *-- Item
InventoryManager -- SceneManager
SceneManager -- SceneController
SceneController -- Inventory
}

namespace resources {
java.SceneController -- MainScene
java.SceneController -- ErrorScene
java.SceneManager -- MainScene
java.SceneManager -- ErrorScene
}

@enduml